<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <ImageView
            android:id="@+id/tony_image"
            style="@style/AvengerImage"
            android:src="@drawable/tony"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

    <View android:id="@+id/zero_size_view"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_below="@id/tony_image"/>

    <View android:id="@+id/invisible_view"
          android:layout_width="10dp"
          android:layout_height="10dp"
          android:layout_below="@id/tony_image"/>

    <TextView
            android:id="@+id/tony_header"
            android:text="@string/tony_header"
            style="@style/HeaderText"
            android:layout_toRightOf="@id/tony_image"/>

    <TextView
            android:id="@+id/tony_description"
            style="@style/DescriptionText"
            android:layout_toRightOf="@id/tony_image"
            android:layout_below="@id/tony_header"
            android:text="@string/tony_description"/>

    <ImageView
            android:id="@+id/capitan_image"
            android:src="@drawable/capitan"
            style="@style/AvengerImage"
            android:layout_below="@id/tony_description"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="16dp"/>

    <TextView
            android:id="@+id/capitan_header"
            android:text="@string/capitan_header"
            style="@style/HeaderText"
            android:layout_toRightOf="@id/capitan_image"
            android:layout_alignTop="@id/capitan_image"/>

    <TextView
            android:id="@+id/capitan_description"
            style="@style/DescriptionText"
            android:layout_toRightOf="@id/capitan_image"
            android:layout_below="@id/capitan_header"
            android:text="@string/capitan_description"/>

    <Button
            android:id="@+id/button_to_snap"
            android:text="@string/snap"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_snap_button"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/capitan_description"
                  android:layout_marginTop="16dp"
                  android:orientation="horizontal">

        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@android:color/holo_red_light"
        />

        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@android:color/holo_orange_dark"
        />

        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@color/yellow"
        />

        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@android:color/holo_green_light"
        />

        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@android:color/holo_blue_bright"
        />

        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@android:color/holo_blue_dark"
        />
        <View android:layout_width="50dp"
              android:layout_height="50dp"
              android:background="@android:color/holo_purple"
        />

    </LinearLayout>

</RelativeLayout>